Actions
Bug #13060
closedpkg_config breaks when adding '-Wconversion' to $CFLAGS
Bug #13060:
pkg_config breaks when adding '-Wconversion' to $CFLAGS
Description
When compiling the nokogiri gem, you can opt to use system libraries which uses pkg_config. When I add '-Wconversion' to $CFLAGS, it causes 'pkg_config('libxml-2.0')' to return nil. This is not the case in Ruby 2.3.3.
This will affect anyone using nokogiri with Ruby 2.4.0 on Heroku.
test script:
require 'mkmf'
puts RUBY_DESCRIPTION
puts "pkg_config('libxml-2.0'): #{pkg_config('libxml-2.0').inspect}"
puts "Adding -Wconversion to $CFLAGS"
$CFLAGS << " -Wconversion"
puts "pkg_config('libxml-2.0'): #{pkg_config('libxml-2.0').inspect}"
ruby 2.3.3 output:
ruby 2.3.3p222 (2016-11-21 revision 56859) [x86_64-linux]
pkg_config('libxml-2.0'): ["", "", "-lxml2"]
Adding -Wconversion to $CFLAGS
pkg_config('libxml-2.0'): ["", "", "-lxml2"]
ruby 2.4.0-rc1 output:
Updated by hone (Terence Lee) over 9 years ago
I was able to track it down to this commit using git bisect, https://github.com/ruby/ruby/commit/feaa82a42ba238d9192d219f72229f4c3948957f.
Updated by naruse (Yui NARUSE) over 9 years ago
- Status changed from Open to Closed
Applied in changeset r57150.
suppress warning: implicit conversion changes signedness
It causes [Bug #13060]
Updated by nobu (Nobuyoshi Nakada) over 9 years ago
- Description updated (diff)
Actions